--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <header>
                 <nav>
                     <ul id="menu-rd" class="group">
-                        <li><a href="#">Item 1 long long long long</a></li>
+                        <li><a href="#">Item 1</a></li>
                         <li class="has-sub-menu">
                             <a href="#">Item 2</a><div class="show-sub-menu" tabindex="0"><span class="icon-angle-circled-down"></span></div>
                             <ul class="sub-menu">
