--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div id="page">
             <header>
                 <nav>
-                    <ul id="menu-rd" class="group">
+                    <ul id="menu-rd" class="clearfix">
                         <li><a href="#">Item 1</a></li>
                         <li class="has-sub-menu">
                             <a href="#">Item 2</a><div class="show-sub-menu" tabindex="0"><span class="icon-angle-circled-down"></span></div>
@@ -67,7 +67,7 @@
             <section id="content">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, excepturi, asperiores, ad ratione nisi quo soluta eos placeat totam unde fuga natus eligendi expedita. Quisquam, ad eum totam nesciunt dignissimos! Nisi, beatae, cum, explicabo adipisci earum impedit voluptates repellendus quo magni totam eveniet numquam culpa sed ab incidunt temporibus neque architecto illum.</p>
             </section>
-            <footer class="group">
+            <footer class="clearfix">
                 <p>Responsive Navigation by <a href="http://michal.zalecki.pl">Michał Załęcki</a> for <a href="http://webroad.pl">WEBroad.pl</a></p>
             </footer>
         </div>
