--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 
         <div id="page">
             <header>
-                <nav>
+                <nav id="masternav">
                     <ul id="menu-rd" class="clearfix">
                         <li><a href="#">Item 1</a></li>
-                        <li class="has-sub-menu">
-                            <a href="#">Item 2</a><div class="show-sub-menu" tabindex="0"><span class="icon-angle-circled-down"></span></div>
+                        <li class="menu-item-has-children">
+                            <a href="#">Item 2</a><div class="show-sub-menu" tabindex="0"><span class="icon-plus"></span></div>
                             <ul class="sub-menu">
                                 <li><a href="#">Item 2.1</a></li>
                                 <li><a href="#">Item 2.2</a></li>
@@ -36,16 +36,16 @@
                             </ul>
                         </li>
                         <li><a href="#">Item 3</a></li>
-                        <li class="has-sub-menu">
-                            <a href="#">Item 4</a><div class="show-sub-menu" tabindex="0"><span class="icon-angle-circled-down"></span></div>
+                        <li class="menu-item-has-children">
+                            <a href="#">Item 4</a><div class="show-sub-menu" tabindex="0"><span class="icon-plus"></span></div>
                             <ul class="sub-menu">
                                 <li><a href="#">Item 4.1</a></li>
                                 <li><a href="#">Item 4.2</a></li>
-                                <li class="has-sub-menu">
-                                    <a href="#">Item 4.3</a><div class="show-sub-menu" tabindex="0"><span class="icon-angle-circled-down"></span></div>
+                                <li class="menu-item-has-children">
+                                    <a href="#">Item 4.3</a><div class="show-sub-menu" tabindex="0"><span class="icon-plus"></span></div>
                                     <ul class="sub-menu">
-                                        <li class="has-sub-menu">
-                                            <a href="#">Item 4.3.1</a><div class="show-sub-menu" tabindex="0"><span class="icon-angle-circled-down"></span></div>
+                                        <li class="menu-item-has-children">
+                                            <a href="#">Item 4.3.1</a><div class="show-sub-menu" tabindex="0"><span class="icon-plus"></span></div>
                                             <ul class="sub-menu">
                                                 <li><a href="#">Item 4.3.1.1</a></li>
                                                 <li><a href="#">Item 4.3.1.2</a></li>
@@ -66,6 +66,8 @@
             </header>
             <section id="content">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, excepturi, asperiores, ad ratione nisi quo soluta eos placeat totam unde fuga natus eligendi expedita. Quisquam, ad eum totam nesciunt dignissimos! Nisi, beatae, cum, explicabo adipisci earum impedit voluptates repellendus quo magni totam eveniet numquam culpa sed ab incidunt temporibus neque architecto illum.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, minima, modi consequuntur velit temporibus voluptates distinctio atque eos possimus veritatis corporis quo ipsam delectus maiores sint laboriosam eaque a soluta.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, porro, pariatur, beatae ad ipsam animi ipsa sunt velit hic veritatis nihil in quisquam recusandae vero quas laborum assumenda facilis doloremque.</p>
             </section>
             <footer class="clearfix">
                 <p>Responsive Navigation by <a href="http://michal.zalecki.pl">Michał Załęcki</a> for <a href="http://webroad.pl">WEBroad.pl</a></p>
