v 2.3 - WEBroad article update

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <ul id="menu-rd" class="clearfix">
                         <li><a href="#">Item 1</a></li>
                         <li class="menu-item-has-children">
-                            <a href="#">Item 2</a><div class="show-sub-menu" tabindex="0"><span class="icon-plus"></span></div>
+                            <a href="#">Item 2</a><div class="show-sub-menu" tabindex="0"><i class="icon-plus"></i></div>
                             <ul class="sub-menu">
                                 <li><a href="#">Item 2.1</a></li>
                                 <li><a href="#">Item 2.2</a></li>
@@ -37,15 +37,15 @@
                         </li>
                         <li><a href="#">Item 3</a></li>
                         <li class="menu-item-has-children">
-                            <a href="#">Item 4</a><div class="show-sub-menu" tabindex="0"><span class="icon-plus"></span></div>
+                            <a href="#">Item 4</a><div class="show-sub-menu" tabindex="0"><i class="icon-plus"></i></div>
                             <ul class="sub-menu">
                                 <li><a href="#">Item 4.1</a></li>
                                 <li><a href="#">Item 4.2</a></li>
                                 <li class="menu-item-has-children">
-                                    <a href="#">Item 4.3</a><div class="show-sub-menu" tabindex="0"><span class="icon-plus"></span></div>
+                                    <a href="#">Item 4.3</a><div class="show-sub-menu" tabindex="0"><i class="icon-plus"></i></div>
                                     <ul class="sub-menu">
                                         <li class="menu-item-has-children">
-                                            <a href="#">Item 4.3.1</a><div class="show-sub-menu" tabindex="0"><span class="icon-plus"></span></div>
+                                            <a href="#">Item 4.3.1</a><div class="show-sub-menu" tabindex="0"><i class="icon-plus"></i></div>
                                             <ul class="sub-menu">
                                                 <li><a href="#">Item 4.3.1.1</a></li>
                                                 <li><a href="#">Item 4.3.1.2</a></li>
@@ -70,7 +70,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, porro, pariatur, beatae ad ipsam animi ipsa sunt velit hic veritatis nihil in quisquam recusandae vero quas laborum assumenda facilis doloremque.</p>
             </section>
             <footer class="clearfix">
-                <p>Responsive Navigation by <a href="http://michal.zalecki.pl">Michał Załęcki</a> for <a href="http://webroad.pl">WEBroad.pl</a></p>
+                <p>Responsive Navigation by <a href="http://michal.zalecki.pl">Michał Załęcki</a> for <a href="http://webroad.pl/javascript/721-responsywne-menu-rozwijane">WEBroad.pl</a></p>
             </footer>
         </div>
 
