--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <ul id="menu-rd" class="clearfix">
                         <li><a href="#">Item 1</a></li>
                         <li class="menu-item-has-children">
-                            <a href="#">Item 2</a><div class="show-sub-menu" tabindex="0"><i class="icon-plus"></i></div>
+                            <a href="#">Item 2</a><button class="show-sub-menu"><i class="icon-plus"></i></button>
                             <ul class="sub-menu">
                                 <li><a href="#">Item 2.1</a></li>
                                 <li><a href="#">Item 2.2</a></li>
@@ -37,15 +37,15 @@
                         </li>
                         <li><a href="#">Item 3</a></li>
                         <li class="menu-item-has-children">
-                            <a href="#">Item 4</a><div class="show-sub-menu" tabindex="0"><i class="icon-plus"></i></div>
+                            <a href="#">Item 4</a><button class="show-sub-menu"><i class="icon-plus"></i></button>
                             <ul class="sub-menu">
                                 <li><a href="#">Item 4.1</a></li>
                                 <li><a href="#">Item 4.2</a></li>
                                 <li class="menu-item-has-children">
-                                    <a href="#">Item 4.3</a><div class="show-sub-menu" tabindex="0"><i class="icon-plus"></i></div>
+                                    <a href="#">Item 4.3</a><button class="show-sub-menu"><i class="icon-plus"></i></button>
                                     <ul class="sub-menu">
                                         <li class="menu-item-has-children">
-                                            <a href="#">Item 4.3.1</a><div class="show-sub-menu" tabindex="0"><i class="icon-plus"></i></div>
+                                            <a href="#">Item 4.3.1</a><button class="show-sub-menu"><i class="icon-plus"></i></button>
                                             <ul class="sub-menu">
                                                 <li><a href="#">Item 4.3.1.1</a></li>
                                                 <li><a href="#">Item 4.3.1.2</a></li>
