--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Responsive Navigation by Michał Załęcki</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=480, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/fontello.css">
         <link rel="stylesheet" href="css/menu.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
@@ -23,11 +22,15 @@
 
         <div id="page">
             <header>
-                <nav id="masternav">
-                    <ul id="menu-rd" class="clearfix">
+                <nav id="masternav" class="menu-nav">
+                    <div id="mastermenu-awning" class="menu-awning">
+                        <span id="awning-title" class="menu-awning-title">Menu</span>
+                        <button id="awning-button" class="menu-awning-button"><i class="icon icon-bars"></i></button>
+                    </div>
+                    <ul id="mastermenu" class="menu">
                         <li><a href="#">Item 1</a></li>
                         <li class="menu-item-has-children">
-                            <a href="#">Item 2</a><button class="show-sub-menu"><i class="icon-plus"></i></button>
+                            <a href="#">Item 2</a><button class="show-sub-menu"><i class="expand-icon"></i></button>
                             <ul class="sub-menu">
                                 <li><a href="#">Item 2.1</a></li>
                                 <li><a href="#">Item 2.2</a></li>
@@ -37,15 +40,15 @@
                         </li>
                         <li><a href="#">Item 3</a></li>
                         <li class="menu-item-has-children">
-                            <a href="#">Item 4</a><button class="show-sub-menu"><i class="icon-plus"></i></button>
+                            <a href="#">Item 4</a><button class="show-sub-menu"><i class="expand-icon"></i></button>
                             <ul class="sub-menu">
                                 <li><a href="#">Item 4.1</a></li>
                                 <li><a href="#">Item 4.2</a></li>
                                 <li class="menu-item-has-children">
-                                    <a href="#">Item 4.3</a><button class="show-sub-menu"><i class="icon-plus"></i></button>
+                                    <a href="#">Item 4.3</a><button class="show-sub-menu"><i class="expand-icon"></i></button>
                                     <ul class="sub-menu">
                                         <li class="menu-item-has-children">
-                                            <a href="#">Item 4.3.1</a><button class="show-sub-menu"><i class="icon-plus"></i></button>
+                                            <a href="#">Item 4.3.1</a><button class="show-sub-menu"><i class="expand-icon"></i></button>
                                             <ul class="sub-menu">
                                                 <li><a href="#">Item 4.3.1.1</a></li>
                                                 <li><a href="#">Item 4.3.1.2</a></li>
@@ -60,6 +63,7 @@
                                 </li>
                                 <li><a href="#">Item 4.4</a></li>
                             </ul>
+                            <!-- <li><a href="#">Item 5</a></li> -->
                         </li>
                     </ul>
                 </nav>
@@ -78,5 +82,6 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
+        <script src="js/menu.js"></script>
     </body>
 </html>
