--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
 
         <div id="page">
             <header>
-                <nav id="masternav" class="menu-nav">
-                    <div id="mastermenu-awning" class="menu-awning">
-                        <span id="awning-title" class="menu-awning-title">Menu</span>
-                        <button id="awning-button" class="menu-awning-button"><i class="icon-bars"></i></button>
+                <nav class="masternav">
+                    <div class="masternav__awning">
+                        <span class="masternav__awning__title">Menu</span>
+                        <button class="masternav__awning__button icon-bars"></button>
                     </div>
-                    <ul id="mastermenu" class="menu">
+                    <ul class="masternav__menu">
                         <li class="icon-home"><a href="#">Item 1</a></li>
                         <li class="menu-item-has-children icon-camera">
-                            <a href="#">Item 2</a><button class="show-sub-menu"><i class="icon-angle-down"></i></button>
+                            <a href="#">Item 2</a><button class="show-sub-menu icon-angle-down"></button>
                             <ul class="sub-menu">
                                 <li><a href="#">Item 2.1</a></li>
                                 <li><a href="#">Item 2.2</a></li>
@@ -40,15 +40,15 @@
                         </li>
                         <li><a href="#">Item 3</a></li>
                         <li class="menu-item-has-children icon-flag">
-                            <a href="#">Item 4</a><button class="show-sub-menu"><i class="icon-angle-down"></i></button>
+                            <a href="#">Item 4</a><button class="show-sub-menu icon-angle-down"></button>
                             <ul class="sub-menu">
                                 <li><a href="#">Item 4.1</a></li>
                                 <li><a href="#">Item 4.2</a></li>
                                 <li class="menu-item-has-children">
-                                    <a href="#">Item 4.3</a><button class="show-sub-menu"><i class="icon-angle-down"></i></button>
+                                    <a href="#">Item 4.3</a><button class="show-sub-menu icon-angle-down"></button>
                                     <ul class="sub-menu">
                                         <li class="menu-item-has-children">
-                                            <a href="#">Item 4.3.1</a><button class="show-sub-menu"><i class="icon-angle-down"></i></button>
+                                            <a href="#">Item 4.3.1</a><button class="show-sub-menu icon-angle-down"></button>
                                             <ul class="sub-menu">
                                                 <li><a href="#">Item 4.3.1.1</a></li>
                                                 <li><a href="#">Item 4.3.1.2</a></li>
