--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <div>
+        <div id="page">
             <header>
                 <nav class="masternav">
                     <div class="masternav__awning">
